<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PracticalTest01Var05MainActivity">

    <!-- Top-right navigation button -->
    <Button
        android:id="@+id/navigate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate_to_secondary_activity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Non-editable TextView to display button names -->
    <TextView
        android:id="@+id/display_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/pressed_buttons"
        android:editable="false"
        app:layout_constraintTop_toBottomOf="@id/navigate_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Top-left button -->
    <Button
        android:id="@+id/button_top_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_left"
        app:layout_constraintTop_toBottomOf="@id/display_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"/>

    <!-- Top-right button -->
    <Button
        android:id="@+id/button_top_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_right"
        app:layout_constraintTop_toTopOf="@id/button_top_left"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"/>

    <!-- Center button -->
    <Button
        android:id="@+id/button_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/center"
        app:layout_constraintTop_toBottomOf="@id/button_top_left"
        app:layout_constraintBottom_toTopOf="@id/button_bottom_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Bottom-left button -->
    <Button
        android:id="@+id/button_bottom_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"/>

    <!-- Bottom-right button -->
    <Button
        android:id="@+id/button_bottom_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
